--- a/index.html
+++ b/index.html
@@ -12,112 +12,144 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-        <nav>
+    <header class="header">
+        <div class="container">
+        <nav class="nav">
 <a href="./index.html" class="nav-logo">Web<span class="logo-studio-header">Studio</span></a>
-<ul>
-    <li><a href="./index.html" class="nav-link">Studio</a></li>
-    <li><a href="" class="nav-link">Portfolio</a></li>
-    <li><a href="" class="nav-link">Contacts</a></li>
+<ul class="menu">
+    <li><a href="./index.html" class="menu-link">Studio</a></li>
+    <li><a href="" class="menu-link">Portfolio</a></li>
+    <li><a href="" class="menu-link">Contacts</a></li>
 </ul>
         </nav>
         <address class="address">
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="address-contacts">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="address-contacts">+11 (000) 111-11-11</a></li>
+            <ul class="address-menu">
+                <li><a href="mailto:info@devstudio.com" class="menu-contacts">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="menu-contacts">+11 (000) 111-11-11</a></li>
             </ul>
                     </address>
+                </div>
     </header>
     <main>
         <section class="order">
+            <div class="container">
             <h1 class="first-title">Effective Solutions for Your Business</h1>
             <button type="button" class="order-button">Order Service</button>
+        </div>
         </section>
-        <section>
+        <section class="advantages">
+            <div class="container">
             <h2>Advantages</h2>
-            <ul>
-                <li>
+            <ul class="advantages-list">
+                <li class="advantages-list-item">
                     <h3 class="third-title">Strategy</h3>
                     <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
-                <li>
+                <li class="advantages-list-item">
                     <h3 class="third-title">Punctuality</h3>
                     <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
+                <li class="advantages-list-item">
                     <h3 class="third-title">Diligence</h3>
                     <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
+                <li class="advantages-list-item">
                     <h3 class="third-title">Technologies</h3>
                     <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
+        </div>
         </section>
         <section class="team">
+            <div class="container">
             <h2 class="second-title">Our Team</h2>
-            <ul>
+            <ul class="team-members-list">
                 <li class="team-member">
-                    <img src="./images/mark.jpg" alt="Mark" width="264" />
-                                <h3 class="third-title">Mark Guerrero</h3>
-                                <p class="text">Product Designer</p>
+                    <img src="./images/team/mark.jpg" alt="Mark" width="264" />
+                    <div class="member-decsription">
+                                <h3 class="member-name third-title">Mark Guerrero</h3>
+                                <p class="member-position text">Product Designer</p>
+                            </div>
                 </li>
                 <li class="team-member">
-                    <img src="./images/tom.jpg" alt="Tom" width="264" />
-                            <h3 class="third-title">Tom Ford</h3>
-                            <p class="text">Frontend Developer</p>
+                    <img src="./images/team/tom.jpg" alt="Tom" width="264" />
+                    <div class="member-decsription">
+                            <h3 class="member-name third-title">Tom Ford</h3>
+                            <p class="member-position text">Frontend Developer</p>
+                        </div>
                 </li>
                 <li class="team-member">
-                    <img src="./images/camila.jpg" alt="Camila" width="264" />
-                            <h3 class="third-title">Camila Garcia</h3>
-                            <p class="text">Marketing</p>
+                    <img src="./images/team/camila.jpg" alt="Camila" width="264" />
+                    <div class="member-decsription">
+                            <h3 class="member-name third-title">Camila Garcia</h3>
+                            <p class="member-position text">Marketing</p>
+                        </div>
                 </li>
                 <li class="team-member">
-                    <img src="./images/daniel.jpg" alt="Daniel" width="264" />
-                            <h3 class="third-title">Daniel Wilson</h3>
-                            <p class="text">UI Designer</p>
+                    <img src="./images/team/daniel.jpg" alt="Daniel" width="264" />
+                    <div class="member-decsription">
+                            <h3 class="member-name third-title">Daniel Wilson</h3>
+                            <p class="member-position text">UI Designer</p>
+                        </div>
                 </li>
             </ul>
+        </div>
         </section>
-        <section>
+        <section class="portfolio">
+            <div class="container">
             <h2 class="second-title" id="portfolio">Our Portfolio</h2>
-            <ul>
+            <ul class="portfolio-examples-list">
                 <li class="portfolio-example">
                     <img src="./images/portfolio/banking-app.jpg" alt="Banking app" width="360" />
-                            <h3 class="third-title">Banking App</h3>
+                    <div class="example-description">
+                            <h3 class="example-name third-title">Banking App</h3>
                             <p class="text">App</p>
+                        </div>
                 </li>
                 <li class="portfolio-example">
                     <img src="./images/portfolio/cashless-payment.jpg" alt="Cashless payment" width="360" />
-                            <h3 class="third-title">Cashless Payment</h3>
+                    <div class="example-description">
+                            <h3 class="example-name third-title">Cashless Payment</h3>
                             <p class="text">Marketing</p>
+                        </div>
                 </li>
                 <li class="portfolio-example">
                     <img src="./images/portfolio/meditation-app.jpg" alt="Meditation app" width="360" />
-                            <h3 class="third-title">Meditation App</h3>
+                    <div class="example-description"></div>
+                            <h3 class="example-name third-title">Meditation App</h3>
                             <p class="text">App</p>
+                        </div>
                 </li>
                 <li class="portfolio-example">
                     <img src="./images/portfolio/taxi-service.jpg" alt="Taxi service" width="360" />
-                            <h3 class="third-title">Taxi Service</h3>
+                    <div class="example-description"></div>
+                            <h3 class="example-name third-title">Taxi Service</h3>
                             <p class="text">Marketing</p>
+                        </div>
                 </li>
                 <li class="portfolio-example">
                     <img src="./images/portfolio/screen-illustrations.jpg" alt="Screen illustrations" width="360" />
-                            <h3 class="third-title">Screen Illustrations</h3>
+                    <div class="example-description"></div>
+                            <h3 class="example-name third-title">Screen Illustrations</h3>
                             <p class="text">Design</p>
+                        </div>
                 </li>
                 <li class="portfolio-example">
                     <img src="./images/portfolio/online-courses.jpg" alt="Online courses" width="360" />
-                            <h3 class="third-title">Online Courses</h3>
+                    <div class="example-description"></div>
+                            <h3 class="example-name third-title">Online Courses</h3>
                             <p class="text">Marketing</p>
+                        </div>
                 </li>
             </ul>
+        </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="nav-logo">Web<span class="logo-studio-footer">Studio</span></a>
+        <div class="container">
+        <a href="./index.html" class="nav-logo-footer">Web<span class="logo-studio-footer">Studio</span></a>
         <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
     </footer>
   </body>
 </html>
