HOMEWORK3 WAS CORRECTED

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <header class="header">
-        <div class="container">
-        <nav class="nav">
-<a href="./index.html" class="nav-logo">Web<span class="logo-studio-header">Studio</span></a>
+            <div class="container header-container">
+                <nav class="nav">
+                    <a href="./index.html" class="nav-logo">Web<span class="logo-studio-header">Studio</span></a>
 <ul class="menu">
     <li><a href="./index.html" class="menu-link">Studio</a></li>
     <li><a href="" class="menu-link">Portfolio</a></li>
@@ -39,7 +39,7 @@
         </section>
         <section class="advantages">
             <div class="container">
-            <h2>Advantages</h2>
+            <h2 class="hidden">Advantages</h2>
             <ul class="advantages-list">
                 <li class="advantages-list-item">
                     <h3 class="third-title">Strategy</h3>
@@ -66,28 +66,28 @@
             <ul class="team-members-list">
                 <li class="team-member">
                     <img src="./images/team/mark.jpg" alt="Mark" width="264" />
-                    <div class="member-decsription">
+                    <div class="member-description">
                                 <h3 class="member-name third-title">Mark Guerrero</h3>
                                 <p class="member-position text">Product Designer</p>
                             </div>
                 </li>
                 <li class="team-member">
                     <img src="./images/team/tom.jpg" alt="Tom" width="264" />
-                    <div class="member-decsription">
+                    <div class="member-description">
                             <h3 class="member-name third-title">Tom Ford</h3>
                             <p class="member-position text">Frontend Developer</p>
                         </div>
                 </li>
                 <li class="team-member">
                     <img src="./images/team/camila.jpg" alt="Camila" width="264" />
-                    <div class="member-decsription">
+                    <div class="member-description">
                             <h3 class="member-name third-title">Camila Garcia</h3>
                             <p class="member-position text">Marketing</p>
                         </div>
                 </li>
                 <li class="team-member">
                     <img src="./images/team/daniel.jpg" alt="Daniel" width="264" />
-                    <div class="member-decsription">
+                    <div class="member-description">
                             <h3 class="member-name third-title">Daniel Wilson</h3>
                             <p class="member-position text">UI Designer</p>
                         </div>
@@ -115,28 +115,28 @@
                 </li>
                 <li class="portfolio-example">
                     <img src="./images/portfolio/meditation-app.jpg" alt="Meditation app" width="360" />
-                    <div class="example-description"></div>
+                    <div class="example-description">
                             <h3 class="example-name third-title">Meditation App</h3>
                             <p class="text">App</p>
                         </div>
                 </li>
                 <li class="portfolio-example">
                     <img src="./images/portfolio/taxi-service.jpg" alt="Taxi service" width="360" />
-                    <div class="example-description"></div>
+                    <div class="example-description">
                             <h3 class="example-name third-title">Taxi Service</h3>
                             <p class="text">Marketing</p>
                         </div>
                 </li>
                 <li class="portfolio-example">
                     <img src="./images/portfolio/screen-illustrations.jpg" alt="Screen illustrations" width="360" />
-                    <div class="example-description"></div>
+                    <div class="example-description">
                             <h3 class="example-name third-title">Screen Illustrations</h3>
                             <p class="text">Design</p>
                         </div>
                 </li>
                 <li class="portfolio-example">
                     <img src="./images/portfolio/online-courses.jpg" alt="Online courses" width="360" />
-                    <div class="example-description"></div>
+                    <div class="example-description">
                             <h3 class="example-name third-title">Online Courses</h3>
                             <p class="text">Marketing</p>
                         </div>
